name:                grammar
version:             0.1.0.0
synopsis:            Context-free grammars and random word generation
description:         See README.md.
homepage:            https://github.com/arekfu/grammar#readme
license:             BSD3
license-file:        LICENSE
author:              Davide Mancusi
maintainer:          Davide Mancusi <arekfu@gmail.com>
copyright:           2017 Davide Mancusi
category:            Formal Languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.2

library
  hs-source-dirs:      src
  exposed-modules:     Grammar
                     , Grammar.ParseTree
                     , Grammar.MC
                     , Grammar.CFG
                     , Grammar.CFG.Random
                     , Grammar.Regex
                     , Grammar.Regex.Parse
                     , Grammar.Regex.Random
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , tf-random
                     , mtl
                     , vector
                     , deepseq
                     , parsec
  default-extensions:  DeriveGeneric
                     , DeriveAnyClass
                     , FlexibleContexts
                     , RankNTypes
  other-extensions:    TypeFamilies
  default-language:    Haskell2010

executable grammar-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , grammar
                     , clock
  default-language:    Haskell2010

test-suite grammar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       CFGTest
                     , CFGRandomTest
                     , RegexTest
                     , RegexParseTest
                     , RegexRandomTest
                     , SymbolsTest
                     , MCTest
  build-depends:       base
                     , grammar
                     , containers
                     , vector
                     , QuickCheck
                     , deepseq
                     , regex-tdfa
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  DeriveGeneric
                     , DeriveAnyClass
                     , TemplateHaskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arekfu/grammar
